...
                            Icon(Icons.Default.Close, stringResource(R.string.erase_search_query_description))
                        }
                    }
                },
            )
        }, navigationIcon = {
            IconButton(toggleDrawer, Modifier.testTag("ToggleDrawerLaunches")) {
                Icon(Icons.Default.Menu, stringResource(R.string.toggle_drawer_icon_description))
            }
        }, actions = {
            IconButton(onFilterScreenClick, Modifier.testTag("NavigateToFilters")) {
                BadgedBox(
                    badge = {
                        if (isAnyFilterActive) {
                            Badge(Modifier.testTag("AnyActiveFilterBadge"))
                        }
                    }
                ) {
                    Icon(
                        painterResource(R.drawable.ic_filter_list),
                        stringResource(R.string.navigate_to_filtering_description),
...
