...
            stringResource(R.string.launches_filter_rockets),
            style = MaterialTheme.typography.labelLarge

        )
        Spacer(Modifier.weight(1f))
        if (selectedRockets != 0) {
            Badge(Modifier.padding(16.dp).testTag("RocketBadge")) {
                Text(selectedRockets.toString())
            }
        }
        Icon(
            Icons.AutoMirrored.Default.KeyboardArrowRight,
            stringResource(R.string.navigate_to_rockets_filtering_description)
...
